feat: compliance calculation logic added.